--- a/01.03.2023/trabalho_rna_continuo.Rmd
+++ b/01.03.2023/trabalho_rna_continuo.Rmd
@@ -167,3 +167,62 @@ Com o valor de eta alterado para 0.1 e mantendo o número máximo de épocas em 
 Ao refazer as tarefas pedidas no exercício 1, verificou-se que a rede neural apresentou um desempenho melhor em relação ao experimento anterior, tendo alcançado um valor final de erro próximo de zero e uma aproximação mais precisa entre as saídas desejadas e estimadas.
 
 A alteração do valor do parâmetro eta afeta diretamente a taxa de aprendizado da rede neural. Quando esse valor é aumentado, a rede pode aprender mais rápido, mas também pode ocorrer o risco de que ela fique presa em mínimos locais do erro e, portanto, não consiga aprender de forma mais precisa. Isso pode afetar o desempenho geral da rede neural.
+
+## Terceira Questão
+3) Por fim, refaça os mesmos ensaios e análises da questão 2, agora alterando o valor inicial dos pesos sinápticos para W<-c(0.1,1).
+
+- Segue código condensado mudando W para W<-c(0.1,1).
+```{r}
+N<-10
+X<-seq(1,N)
+Y<-2*X+3
+plot(X,Y,type="o",xlim=c(0, 10),ylim=c(0,25))
+```
+
+```{r}
+X<-X/max(X)
+Y<-Y/max(Y)
+X<-t(t(X))
+bias<-1
+X<-cbind(X,bias)
+print(X)
+print(cbind(Y))
+```
+```{r}
+epoca_max<-300
+eta<-0.1
+W<-c(0.1,1)
+err_iter<-rep(0,N)
+err_epoc<-rep(0,epoca_max)
+
+for (epoca in 1:epoca_max) {
+  for (i in 1:N) {
+    v <- sum(X[i,]*W)
+    erro <- Y[i] - v
+    delta <- eta*erro*X[i,]
+    W <- W + delta
+    err_iter[i] <- 0.5*(erro^2)
+  }
+  err_epoc[epoca] <- sum(err_iter)
+}
+plot(err_epoc, type = "line", xlab = "época", ylab = "erro quadrático médio")
+```
+
+```{r}
+print(W)
+
+Y_estimado<-X[,1]*W[1]+W[2]
+
+plot(X[,1],Y,type ="n")
+points(X[,1],Y,pch=1,type="o",col="1")
+points(X[,1],Y_estimado,pch=16,type="p",col="2")
+legend(0.1,0.9,legend=c("Y_desejado","Y_estimado"),col=c(1,2),pch=c(1,16))
+
+print(paste("Erro final do treinamento", err_epoc[epoca_max]))
+```
+### Resposta
+Ao alterar o valor inicial dos pesos sinápticos para W <- c(0.1, 1) e manter o valor de eta em 0.1 e o número máximo de épocas em 300, foi possível observar que o ponto de diminuição abrupta no gráfico de erro por época ocorreu em torno da época 20, similar ao exercício anterior.
+
+Ao refazer as tarefas pedidas no exercício 1 e comparar com os resultados obtidos nos experimentos anteriores, verificou-se que a rede neural teve um desempenho levemente inferior ao alcançado no experimento com W <- c(0, 1). O valor final de erro foi maior e a aproximação entre as saídas desejadas e estimadas apresentou discrepâncias mais evidentes.
+
+A alteração do valor inicial dos pesos sinápticos pode influenciar significativamente o processo de treinamento da rede neural, pois esse parâmetro define a posição inicial dos pesos. Um valor inadequado pode levar a um comportamento oscilatório na atualização dos pesos e dificultar o processo de convergência.
